# ce

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
homework/: homework-1.ipynb  homework-2.ipynb  homework-3.ipynb  homework-4.ipynb
scripts/: 1.getting-started.ipynb  2.working-with-llms.ipynb  3.lexical-search.ipynb  4.embeddings-semantic-search.ipynb  helpers.py
