[project]
name = "ce"
version = "0.1.0"
description = "AI Engineering - Getting Started"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.76.0",
    "google-genai>=1.59.0",
    "instructor>=1.14.3",
    "ipykernel>=6.0.0",
    "litellm>=1.0.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "numpy>=2.0.0",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pre-commit>=3.0.0",
    "pydantic>=2.0.0",
    "pystemmer>=3.0.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.1.2",
]
